--- a/_includes/date_format.liquid
+++ b/_includes/date_format.liquid
@@ -12,7 +12,7 @@
 {%- if site.active_lang == 'en-us' -%}
   {{ month }}
   {{ day }}, {{ year }}
-{%- elsif site.active_lang == 'pt-br' -%}
+{%- elsif site.active_lang == 'ja-jp' -%}
   {{ day }} de {{ month }}, {{ year }}
 {%- else -%}
   {{ day }}
